--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "chrome-extension-typescript-starter",
+  "name": "sd-image-picker",
   "version": "1.0.0",
-  "description": "chrome-extension-typescript-starter",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "watch": "webpack --config webpack/webpack.dev.js --watch",
@@ -14,9 +14,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/chibat/chrome-extension-typescript-starter.git"
+    "url": "https://github.com/fxding/sd-image-picker.git"
   },
   "dependencies": {
+    "exifr": "^7.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
