--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
   "manifest_version": 3,
 
-  "name": "Chrome Extension TypeScript Starter",
-  "description": "Chrome Extension, TypeScript, Visual Studio Code",
+  "name": "SD Image Picker",
+  "description": "",
   "version": "1.0",
-
-  "options_ui": {
-    "page": "options.html"
-  },
-
   "action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "48": "icon.png"
+    }
   },
-
+  "icons": {
+    "48": "icon.png",
+    "128": "icon.png"
+  },
   "content_scripts": [
       {
           "matches": ["<all_urls>"],
@@ -26,7 +26,12 @@
   },
 
   "permissions": [
-    "storage"
+    "tabs",
+    "activeTab",
+    "storage",
+    "webNavigation",
+    "scripting",
+    "contextMenus"
   ],
 
   "host_permissions": [
